contact controller: send email

--- a/.env
+++ b/.env
@@ -30,3 +30,8 @@ DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVers
 ###> nelmio/cors-bundle ###
 CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
 ###< nelmio/cors-bundle ###
+
+###> symfony/mailer ###
+# MAILER_DSN=smtp://localhost
+MAILER_DSN=smtp://contact%40stoicsource.com:XO4S6o%2Av%2B%403s@amber.customwebhost.com:465
+###< symfony/mailer ###
