--- a/.env
+++ b/.env
@@ -24,14 +24,9 @@ APP_SECRET=d6275747d39f5c04c42f3d0ce8c1c8d7
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
 # DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7&charset=utf8mb4"
-DATABASE_URL="postgresql://symfony:ChangeMe@127.0.0.1:5432/app?serverVersion=13&charset=utf8"
+DATABASE_URL="mysql://root@127.0.0.1:3306/stoicsource"
 ###< doctrine/doctrine-bundle ###
 
 ###> nelmio/cors-bundle ###
 CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
 ###< nelmio/cors-bundle ###
-
-###> symfony/mailer ###
-# MAILER_DSN=smtp://localhost
-MAILER_DSN=smtp://contact%40stoicsource.com:XO4S6o%2Av%2B%403s@amber.customwebhost.com:465
-###< symfony/mailer ###
