--- a/config/packages/api_platform.yaml
+++ b/config/packages/api_platform.yaml
@@ -5,5 +5,10 @@ api_platform:
         json: ['application/merge-patch+json']
     swagger:
         versions: [3]
+    http_cache:
+        public: true
     defaults:
         pagination_enabled: false
+        cache_headers:
+            max_age: 86400
+            vary: [ 'Content-Type' ]
