--- a/config/packages/api_platform.yaml
+++ b/config/packages/api_platform.yaml
@@ -11,4 +11,4 @@ api_platform:
         pagination_enabled: false
         cache_headers:
             max_age: 86400
-            vary: [ 'Content-Type' ]
+            vary: [ 'Content-Type', 'Origin', 'Access-Control-Allow-Origin' ]
