--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -33,6 +33,10 @@ security:
             logout:
                 path: app_logout
 
+            remember_me:
+                secret: '%kernel.secret%'
+                lifetime: 604800 # 1 week in seconds
+
     # Easy way to control access for large sections of your site
     # Note: Only the *first* access control that matches will be used
     access_control:
