--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,13 @@
 /vendor/
 ###< symfony/framework-bundle ###
 /phpinfo.txt
+
+###> phpunit/phpunit ###
+/phpunit.xml
+.phpunit.result.cache
+###< phpunit/phpunit ###
+
+###> symfony/phpunit-bridge ###
+.phpunit.result.cache
+/phpunit.xml
+###< symfony/phpunit-bridge ###
