--- a/composer.json
+++ b/composer.json
@@ -8,10 +8,14 @@
         "ext-ctype": "*",
         "ext-dom": "*",
         "ext-iconv": "*",
+        "api-platform/core": "^2.6",
+        "beberlei/doctrineextensions": "^1.3",
         "doctrine/annotations": "^1.0",
         "doctrine/doctrine-bundle": "^2.7",
         "doctrine/doctrine-migrations-bundle": "^3.2",
         "doctrine/orm": "^2.13",
+        "easycorp/easyadmin-bundle": "^4.3",
+        "nelmio/cors-bundle": "^2.1",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.8",
         "sensio/framework-extra-bundle": "^6.1",
@@ -23,6 +27,7 @@
         "symfony/flex": "^2",
         "symfony/form": "6.1.*",
         "symfony/framework-bundle": "6.1.*",
+        "symfony/html-sanitizer": "6.1.*",
         "symfony/http-client": "6.1.*",
         "symfony/intl": "6.1.*",
         "symfony/mailer": "6.1.*",
@@ -44,10 +49,6 @@
         "symfony/yaml": "6.1.*",
         "twig/extra-bundle": "^2.12|^3.0",
         "twig/twig": "^2.12|^3.0",
-        "api-platform/core": "^2.6",
-        "beberlei/doctrineextensions": "^1.3",
-        "easycorp/easyadmin-bundle": "^4.3",
-        "nelmio/cors-bundle": "^2.1",
         "wandersonwhcr/romans": "^1.3"
     },
     "config": {
