--- a/composer.json
+++ b/composer.json
@@ -105,6 +105,7 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5",
+        "rector/rector": "^0.14.3",
         "symfony/browser-kit": "6.1.*",
         "symfony/css-selector": "6.1.*",
         "symfony/debug-bundle": "6.1.*",
