CORS: restrict to own hosts

--- a/.env
+++ b/.env
@@ -28,7 +28,8 @@ DATABASE_URL="mysql://root@127.0.0.1:3306/stoicsource"
 ###< doctrine/doctrine-bundle ###
 
 ###> nelmio/cors-bundle ###
-CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
+CORS_ORIGIN_REGEX=false
+CORS_ALLOW_ORIGIN='*'
 ###< nelmio/cors-bundle ###
 
 ###> symfony/messenger ###
