--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -18,6 +18,13 @@ framework:
     php_errors:
         log: true
 
+    uid:
+        default_uuid_version: 7
+        time_based_uuid_version: 7
+
+    annotations:
+        enabled: false
+
 when@test:
     framework:
         test: true
