--- a/config/packages/api_platform.yaml
+++ b/config/packages/api_platform.yaml
@@ -1,4 +1,13 @@
 api_platform:
+    title: StoicSource API
+    version: 1.0.0
+    formats:
+        json: [ 'application/json' ]
+        jsonld: ['application/ld+json']
+    docs_formats:
+        jsonld: [ 'application/ld+json' ]
+        jsonopenapi: [ 'application/vnd.openapi+json' ]
+        html: [ 'text/html']
     mapping:
         paths: ['%kernel.project_dir%/src/Entity']
     patch_formats:
@@ -8,8 +17,14 @@ api_platform:
     http_cache:
         public: true
     defaults:
+        stateless: true
         pagination_enabled: false
         cache_headers:
             max_age: 86400
-            vary: [ 'Content-Type', 'Origin', 'Access-Control-Allow-Origin' ]
+            vary: [ 'Content-Type', 'Origin', 'Access-Control-Allow-Origin', 'Authorization' ]
             etag: false
+        extra_properties:
+            standard_put: true
+            rfc_7807_compliant_errors: true
+    event_listeners_backward_compatibility_layer: false
+    keep_legacy_inflector: false
