--- a/config/packages/monolog.yaml
+++ b/config/packages/monolog.yaml
@@ -55,3 +55,8 @@ when@prod:
                 type: console
                 process_psr_3_messages: false
                 channels: ["!event", "!doctrine"]
+            deprecation:
+                type: stream
+                channels: [deprecation]
+                path: php://stderr
+                formatter: monolog.formatter.json
