add docker support

--- a/.env
+++ b/.env
@@ -14,6 +14,11 @@
 # Run "composer dump-env prod" to compile .env files for production use (requires symfony/flex >=1.2).
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
+MYSQL_ROOT_PASSWORD=root
+MYSQL_DATABASE=stoicsource
+MYSQL_USER=user
+MYSQL_PASSWORD=pass
+
 ###> symfony/framework-bundle ###
 APP_ENV=dev
 APP_SECRET=d6275747d39f5c04c42f3d0ce8c1c8d7
@@ -23,7 +28,7 @@ APP_SECRET=d6275747d39f5c04c42f3d0ce8c1c8d7
 # Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 #
-DATABASE_URL="mysql://root@127.0.0.1:3306/stoicsource"
+DATABASE_URL="mysql://user:pass@db:3306/stoicsource"
 ###< doctrine/doctrine-bundle ###
 
 ###> nelmio/cors-bundle ###
