--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "ext-ctype": "*",
         "ext-dom": "*",
         "ext-iconv": "*",
-        "api-platform/core": "^3.0",
+        "api-platform/doctrine-orm": "*",
+        "api-platform/symfony": "^4.0",
         "beberlei/doctrineextensions": "^1.3",
         "doctrine/annotations": "^2.0",
         "doctrine/doctrine-bundle": "^2.7",
