run recipe symfony/framework-bundle

--- a/.env
+++ b/.env
@@ -21,7 +21,7 @@ MYSQL_PASSWORD=pass
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
-APP_SECRET=d6275747d39f5c04c42f3d0ce8c1c8d7
+APP_SECRET=
 ###< symfony/framework-bundle ###
 
 ###> doctrine/doctrine-bundle ###
